--- a/viewer2/css/style.css
+++ b/viewer2/css/style.css
@@ -6,3 +6,10 @@
     text-align:center;
     border:3px solid;
 }
+
+#share-box{
+    width: 300px;
+    height: 150px;
+    background-color: blue;
+    position: fixed;
+}
