--- a/viewer2/css/style.css
+++ b/viewer2/css/style.css
@@ -8,8 +8,13 @@
 }
 
 #share-box{
-    width: 300px;
-    height: 150px;
-    background-color: blue;
+    background-color: #d6c6c6;
+    width: 50%;
+    height: 50%;
     position: fixed;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    visibility: hidden;
 }
