Gmail Share functional

--- a/angularPDF/demo/src/app/app.component.html
+++ b/angularPDF/demo/src/app/app.component.html
@@ -86,6 +86,7 @@
   <share-button [theme]="'material-dark'" [button]="'copy'"></share-button>
   <div>
     <share-button button="email"></share-button>
+    <button (click)= shareGmail()>Gmail</button>
   </div>
   <p>Disclaimer: PDF only visable by those with access to distribution statement _ because ...</p>
 </div>
