--- a/angularPDF/demo/src/app/app.component.css
+++ b/angularPDF/demo/src/app/app.component.css
@@ -38,14 +38,15 @@
   }
 
   .toolbar {
-    position: absolute;
+    position: fixed;
+    z-index: 5;
     top: 0;
     left: 0;
     right: 0;
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background-color: #1C2A43;
     color: white; 
     font-weight: 600;
   }
@@ -85,3 +86,4 @@
   a:hover {
     color: #125699;
   }
+
