--- a/angularPDF/demo/src/app/app.component.html
+++ b/angularPDF/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<body>
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
 
@@ -89,9 +89,10 @@
     <button (click)= shareOutlook()> Outlook </button>
     <button (click)= shareGmail()>Gmail</button>
     <button (click)= shareYahoo()>Yahoo</button>
+    <i class="fab fa-google">hi</i>
   </div>
-  <p>Disclaimer: PDF only visable by those with access to distribution statement _ because ...</p>
 </div>
 
 
 <router-outlet></router-outlet>
+</body>
