--- a/angularPDF/demo/src/app/app.component.css
+++ b/angularPDF/demo/src/app/app.component.css
@@ -38,15 +38,14 @@
   }
 
   .toolbar {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 5;
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1C2A43;
+    background-color: #1976d2;
     color: white; 
     font-weight: 600;
   }
