--- a/angularPDF/demo/src/app/app.component.html
+++ b/angularPDF/demo/src/app/app.component.html
@@ -63,7 +63,7 @@
   </ng-container>
 
   <!-- Share Button -->
-  <button (click)= shareBox()>Share</button>
+  <button (click)= openModal() >Share</button>
   <button (click)= onOfflineClick()>Store Offline</button>
 </div>
 
@@ -77,20 +77,6 @@
   [(page)]="page"
   style="display: block;">
   </pdf-viewer>
-</div>
- 
-<div id="share">
-  <button id="share-close" (click)=closeShare() style="float:right;">X</button>
-  <h2>Share!</h2>
-  <input type= "text" value=error id="sharelink">
-  <share-button [theme]="'material-dark'" [button]="'copy'"></share-button>
-  <div>
-    <share-button button="email"></share-button>
-    <button (click)= shareOutlook()> Outlook </button>
-    <button (click)= shareGmail()>Gmail</button>
-    <button (click)= shareYahoo()>Yahoo</button>
-  </div>
-  <p>Disclaimer: PDF only visable by those with access to distribution statement _ because ...</p>
 </div>
 
 
