--- a/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
+++ b/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
@@ -8,7 +8,8 @@
     <span (click)= shareGmail() class="fab fa-google fa-lg">oogle</span> &nbsp;
     <span class="fab fa-yahoo fa-lg" (click)= shareYahoo()></span>&nbsp;
     <button mat-button class = "fab fa-outlook" (click)= shareOutlook()>Outlook</button>&nbsp;
-    <button mat-button>Other</button>&nbsp;
+    <span (click)= shareEmail() class = "far fa-envelope"></span>&nbsp;
+    
 </div>
 </mat-dialog-actions>
 <!-- Mat-dialog-close -->
