--- a/angularPDF/demo/src/app/app.component.css
+++ b/angularPDF/demo/src/app/app.component.css
@@ -76,3 +76,13 @@
   a:hover {
     color: #125699;
   }
+
+  .fas.fa-slash {
+
+    position: relative;
+  
+    top: -1px;
+  
+    left: -30px;
+  
+  }
