a lil UI and the README init

--- a/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
+++ b/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
@@ -5,6 +5,7 @@
         class="fas fa-link" 
         (click)= copyLink()
         title = "Copy Link"
+        style = "margin-left: 5px;"
     ></span>
 </div>
 <mat-dialog-actions>
