--- a/angularPDF/demo/src/app/app.component.html
+++ b/angularPDF/demo/src/app/app.component.html
@@ -71,14 +71,16 @@
   title="Share"
   ></span>
 
-  <!-- Offline Database -->
+  <!-- Offline Database (Slash Icon over wifi icon) -->
   <div>
+    <!-- Wifi Icon -->
     <i (click)= onOfflineClick() 
       title= "Add to Offline Database" 
       style="margin-left: 5px;" 
       class="fas fa-wifi fa-lg" 
       aria-hidden="true">
     </i>
+    <!-- Slash Icon -->
     <i title= "Add to Offline Database" 
       (click)= onOfflineClick()  
       style="margin-left: 5px;" 
