--- a/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
+++ b/angularPDF/demo/src/app/my-dialog/my-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title>{{modalTitle}}</h2>
 <div> 
+    <!-- Input box with href from the top as the value -->
     <input type= "text" value= {{url}} id="sharelink"> 
     <span 
         class="fas fa-link" 
@@ -10,18 +11,25 @@
 </div>
 <mat-dialog-actions>
 <div>
+    <!-- Gmail Share button -->
     <div class="share-btns" (click)= shareGmail() title = Gmail>
         <i class="fab fa-google" id="shareIcon"></i>
         Google
     </div>
+
+    <!-- Ymail Share button -->
     <div class="share-btns" (click)= shareYahoo() title = Ymail>
         <i class="fab fa-yahoo" id="shareIcon"></i>
         Yahoo
     </div>
+
+    <!-- Outlook Share button -->
     <div class="share-btns" (click)= shareOutlook() title = Outlook>
         <i class="fab fa-windows" id="shareIcon"></i>
         Outlook
     </div>
+
+    <!-- Button that opens computer mail app -->
     <div class="share-btns" (click)= shareEmail() title = Other>
         <i class="fa fa-envelope" id="shareIcon"></i>
         Other
