margins are better this way

--- a/angularPDF/demo/src/app/app.component.html
+++ b/angularPDF/demo/src/app/app.component.html
@@ -99,7 +99,7 @@
   [zoom] = "zoom"
   [show-all] = "showAll"
   [(page)]="page"
-  style="display: block;"
+  style="display: block; margin-top: 100px;"
   (after-load-complete)="afterLoadComplete($event)">
   </pdf-viewer>
 </div>
